--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -45,7 +45,7 @@ div.pagination
 .add-form{
     width: 400px;
 }
-.customerForm, .back-form{
+.studentForm, .back-form{
     padding-top: 25px;
     width: 400px;
 }
