--- a/src/main/resources/templates/edit.html
+++ b/src/main/resources/templates/edit.html
@@ -38,7 +38,8 @@
             </table>
         </div>
 
-            <form id="customerForm" class="customerForm">
+
+            <form id="studentForm" class="studentForm">
                 <p><input autocomplete="off" type="text" id="firstname" placeholder="ФИО"/></p>
                 <p><button type="submit" >Принять нового студента</button></p>
             </form>
